<resources>
    <string name="app_name">NewsApp</string>
    <string name="txt_login">Login</string>
    <string name="txt_imageview">ImageView</string>
    <string name="txt_login_instruction">Please Sign in to Continue</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_forgot_password">Forgot Password ?</string>
    <string name="txt_qa_acc">Don’t Have an account ?</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_forget_password">Forget Password</string>
    <string name="tv_sub_forgot">Please fill the input below here</string>
    <string name="txt_create_account">Create Account</string>
    <string name="txt_istruction_sign_up">Please fill the input below here</string>
    <string name="txt_imagebutton">ImageButton</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="txt_register">Register</string>
    <string name="txt_already_qa_account">Already Have an account ?</string>
    <string name="txt_9_feb_2021">9, Feb 2021</string>
    <string name="txt_error">Not Empty</string>
    <string name="txt_pass_mismatch">Password Mismatch</string>
    <string name="txt_users">Users</string>
    <string name="txt_register_failed">Register Failed</string>
    <string name="txt_breaking_news">Breaking News</string>
    <string name="txt_highlight">Tesla Cybertruck is finally ready to enter mass production</string>
    <string name="txt_william_frankyn_miller">William Frankyn-Miller</string>
    <string name="txt_all">All</string>
    <string name="txt_international">International</string>
    <string name="txt_media">Media</string>
    <string name="txt_magazine">Magazine</string>
    <string name="txt_business">Business</string>
    <string name="txt_title_items">Global AI Action Alliance</string>
    <string name="txt_15_02_2021">15/02/2021</string>
    <string name="txt_10_min_read">10 min read</string>
    <string name="txt_floating_button">Floating Button</string>
    <string name="txt_dummy_detail">Jakarta -After capturing the world\'s attention with a unique model, the Tesla Cybertruck is finally ready to enter mass production. Meanwhile, the previous order will still be sent this year. \'It will be an extraordinary vehicle. With any luck we\'ll do a little shipping before the end of this year. But mass production will begin in 2022\' Bos said Tesla , Elon Musk in a meeting of the income statement.</string>
    <string name="txt_ivan_martinez">Ivan Martinez</string>
    <string name="txt_ivan_email">ivanmartinez@gmail.com</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_preference">Preference</string>
    <string name="txt_dark_mode">Dark Mode</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_account">Account</string>
    <string name="txt_edit_account">Edit Account</string>
    <string name="txt_change_account">Change Account</string>
    <string name="txt_language">Language</string>
    <string name="txt_bookmark">Bookmark</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_privacy_and_setting_help">Privacy and Setting Help</string>
</resources>