<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_news"
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:cardCornerRadius="@dimen/_20dp">
        <ImageView
            android:id="@+id/iv_item_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/main_banner"
            android:scaleType="centerCrop"
            android:contentDescription="@string/txt_imageview" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_items"
        android:layout_width="215dp"
        android:layout_height="94dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:text="@string/txt_title_items"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news"
        app:layout_constraintTop_toTopOf="@+id/cv_item_news" />

    <TextView
        android:id="@+id/tv_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="@dimen/_2dp"
        android:text="@string/txt_15_02_2021"
        android:maxWidth="@dimen/_100dp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintStart_toEndOf="@+id/cv_item_news"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_items"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/tv_duration_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_5dp"
        android:drawableStart="@drawable/ic_time"
        android:drawablePadding="@dimen/_2dp"
        android:text="@string/txt_10_min_read"
        android:maxWidth="@dimen/_100dp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toEndOf="@+id/tv_date_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_items"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>